--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "files.autoSave": "afterDelay"
+    "files.autoSave": "afterDelay",
+    "files.associations": {
+        "ft_printf.h": "c",
+        "printf.h": "c",
+        "__locale": "c",
+        "ios": "c"
+    }
 }
